--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <img id="felix" src="felix.png">
     <img id="pause" src="pause.svg">
     <div id="overlay"></div>
   <div id="box">
@@ -28,10 +29,14 @@
         <span id="close">&times;</span>
            <h1>How to play?</h1>
            <ol>
-               <li>Click the bubbles quickly to burst them before they fill 75% of the screen</li>
-               <li>The speed of bubble generation increases with time so be quick</li>
+               <li>Click the bubbles quickly to burst them before they fill 75% of the screen.</li>
+               <li>The speed of bubble generation increases with time so be quick.</li>
                <li>Pro-Tip: Burst the larger bubbles first in order to clear larger area.</li>
                <li>The longer you endure the higher the score!</li>
+               <li>As game progress you will encounter rock bubbles. These are tough guys which require 5 clicks to break them.</li>
+               <li>You have been given 2 Felix-Felicis which freezes the bubbles allowing you to pop bubbles by choosing them.Use them wisely!You can't click the Infinity Gauntlet while using this.</li>
+               <li>Rock bubbles still have to be clicked 5 times to break them when using Felix-Felicis.</li>
+               <li>The Infinity Gauntlet spawns rarely on screen.It clears 50% of the bubbles on the screen. Perfectly balanced as everything should be.</li>
            </ol>
        </div>
        </main>
